# PokedexGame

./: README.md
src/: BattleWindow.cpp  BattleWindow.h  BattleWindow.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyException.cpp  MyException.h  Pokedex.cpp  Pokedex.h  Pokedex.ui  PokedexPage.cpp  PokedexPage.h  PokedexPage.ui  PokedexSecond.h  PokedexSecondPage.cpp  PokedexSecondPage.h  PokedexSecondPage.ui  Pokemon.cpp  Pokemon.h  PokemonCollection.cpp  PokemonCollection.h  TeamCreatorThreeSlots.cpp  TeamCreatorThreeSlots.h  TeamCreatorThreeSlots.ui  Trainer.cpp  Trainer.h  main.cpp  resource.qrc
